[tool.poetry]
name = "pytorch-CycleGAN-and-pix2pix"
version = "0.1.0"
description = "cGAN-based Multi Organ Nuclei Segmentation"
authors = ["Faisal Mahmood <faisalmahmood@bwh.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.4.0"
torchvision = "^0.5.0"
dominate = "^2.5.1"
visdom = "^0.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
